Drop trailing slash on homepage URL in GitHub

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -21,7 +21,7 @@
 
 github:
   description: "Apache Accumulo Classloader Extras"
-  homepage: https://accumulo.apache.org/
+  homepage: https://accumulo.apache.org
   labels:
     - java
     - classloader
