--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,8 @@
     </mailingList>
   </mailingLists>
   <modules>
-    <module>modules/classloaderfactory-substitute</module>
+    <module>modules/example-iterators-a</module>
+    <module>modules/example-iterators-b</module>
     <module>modules/vfs-class-loader</module>
   </modules>
   <scm>
@@ -121,6 +122,7 @@
           <configuration>
             <excludes combine.children="append">
               <exclude>.github/**</exclude>
+              <exclude>**/*.json</exclude>
             </excludes>
           </configuration>
         </plugin>
