--- a/modules/example-iterators-b/pom.xml
+++ b/modules/example-iterators-b/pom.xml
@@ -31,7 +31,6 @@
     <dependency>
       <groupId>org.apache.accumulo</groupId>
       <artifactId>accumulo-core</artifactId>
-      <version>2.1.0-SNAPSHOT</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
@@ -39,6 +38,11 @@
           <artifactId>accumulo-start</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client-api</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
