Updates for Accumulo 2.1.0 SLF4J2 and new MIME type
Accumulo 2.1.0 recently upgraded slf4j to slf4j2. I updated the poms
to account for the new version and additional dependency. Two of the
tests were also failing, which turned out to be caused by the backport
of JDK-8273655. Adding a mime type mapping for application/java-archive
resolved the issue. While debugging I restructured the VFSClassLoaderTest.

--- a/modules/vfs-class-loader/src/test/resources/log4j2-test.properties
+++ b/modules/vfs-class-loader/src/test/resources/log4j2-test.properties
@@ -27,6 +27,9 @@ appender.console.target = SYSTEM_OUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{ISO8601} [%-8c{2}] %-5p: %m%n
 
-rootLogger.level = info
+logger.01.name = org.apache.hadoop
+logger.01.level = warn
+
+rootLogger.level = debug
 rootLogger.appenderRef.console.ref = STDOUT
 
