--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
       <dependency>
         <groupId>org.apache.accumulo</groupId>
         <artifactId>accumulo-core</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.1.0</version>
         <scope>provided</scope>
         <exclusions>
           <exclusion>
@@ -179,7 +179,7 @@
       <dependency>
         <groupId>org.apache.accumulo</groupId>
         <artifactId>accumulo-start</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.1.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
