--- a/pom.xml
+++ b/pom.xml
@@ -171,12 +171,6 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.13.2</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
         <groupId>org.apache.accumulo</groupId>
         <artifactId>accumulo-start</artifactId>
         <version>2.1.0</version>
@@ -206,6 +200,12 @@
         <version>2.19.0</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.9.1</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
@@ -227,6 +227,16 @@
               <exclude>**/*.json</exclude>
             </excludes>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M6</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.0.0-M6</version>
         </plugin>
         <plugin>
           <groupId>com.github.ekryd.sortpom</groupId>
@@ -340,11 +350,15 @@
                   </module>
                   <module name="RegexpSinglelineJava">
                     <property name="format" value="junit[.]framework[.]TestCase" />
-                    <property name="message" value="Use JUnit4+ @Test annotation instead of TestCase" />
+                    <property name="message" value="Use JUnit5+ @Test annotation instead of TestCase" />
                   </module>
                   <module name="RegexpSinglelineJava">
-                    <property name="format" value="import org[.]junit[.]Assert;" />
-                    <property name="message" value="Use static imports for Assert.* methods for consistency" />
+                    <property name="format" value="org[.]junit[.]jupiter[.]api[.]Assertions;" />
+                    <property name="message" value="Use static imports for Assertions.* methods for consistency" />
+                  </module>
+                  <module name="RegexpSinglelineJava">
+                    <property name="format" value="org[.]junit[.]jupiter[.]api[.]Assumptions;" />
+                    <property name="message" value="Use static imports for Assumptions.* methods for consistency" />
                   </module>
                   <module name="OuterTypeFilename" />
                   <module name="AvoidStarImport" />
