Enfore the use of JUnit5

--- a/pom.xml
+++ b/pom.xml
@@ -353,6 +353,10 @@
                     <property name="message" value="Use JUnit5+ @Test annotation instead of TestCase" />
                   </module>
                   <module name="RegexpSinglelineJava">
+                    <property name="format" value="org[.]junit[.][^jupiter]" />
+                    <property name="message" value="Use JUnit5 (JUnit Jupiter) instead of JUnit4 (or lower)" />
+                  </module>
+                  <module name="RegexpSinglelineJava">
                     <property name="format" value="org[.]junit[.]jupiter[.]api[.]Assertions;" />
                     <property name="message" value="Use static imports for Assertions.* methods for consistency" />
                   </module>
