--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@ under the License.]]></licenseText>
         <artifactId>commons-vfs2</artifactId>
         <version>2.10.0</version>
       </dependency>
+      <dependency>
+        <!-- no longer provided by accumulo after 2.1 -->
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-vfs2-hdfs</artifactId>
+        <version>2.10.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
