Exclude hadoop deps and add http5 dep
Exclude the 3.4 hadoop deps from vfs2-hdfs.
Add the http5 client deps needed for the http5 provider

--- a/modules/vfs-class-loader/pom.xml
+++ b/modules/vfs-class-loader/pom.xml
@@ -60,9 +60,23 @@
         <exclusion>
           <!-- exclude this outdated hadoop client from vfs -->
           <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-common</artifactId>
+        </exclusion>
+        <exclusion>
+          <!-- exclude this outdated hadoop client from vfs -->
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-hdfs</artifactId>
+        </exclusion>
+        <exclusion>
+          <!-- exclude this outdated hadoop client from vfs -->
+          <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-hdfs-client</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
     </dependency>
     <dependency>
       <!-- provided by accumulo -->
