--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@ under the License.]]></licenseText>
         <artifactId>commons-vfs2-hdfs</artifactId>
         <version>2.10.0</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpclient5</artifactId>
+        <version>5.4.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
