--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
     </mailingList>
   </mailingLists>
   <modules>
+    <module>modules/local-caching-classloader</module>
     <module>modules/example-iterators-a</module>
     <module>modules/example-iterators-b</module>
     <module>modules/vfs-class-loader</module>
@@ -128,7 +129,7 @@ under the License.]]></licenseText>
         <!-- most dependencies will be provided by the accumulo installation -->
         <groupId>org.apache.accumulo</groupId>
         <artifactId>accumulo-project</artifactId>
-        <version>2.1.3</version>
+        <version>2.1.4</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
