more tests, cleanup, added readme

--- a/modules/local-caching-classloader/src/test/resources/log4j2-test.properties
+++ b/modules/local-caching-classloader/src/test/resources/log4j2-test.properties
@@ -19,7 +19,7 @@
 
 status = info
 dest = err
-name = AccumuloVFSClassLoaderTestLoggingProperties
+name = LocalCachineClassLoaderTestLoggingProperties
 
 appender.console.type = Console
 appender.console.name = STDOUT
@@ -29,6 +29,9 @@ appender.console.layout.pattern = %d{ISO8601} [%-8c{2}] %-5p: %m%n
 
 logger.01.name = org.apache.accumulo.classloader.lcc
 logger.01.level = trace
+
+logger.02.name = org.apache.hadoop
+logger.02.level = error
 
 rootLogger.level = warn
 rootLogger.appenderRef.console.ref = STDOUT
