--- a/modules/local-caching-classloader/pom.xml
+++ b/modules/local-caching-classloader/pom.xml
@@ -28,6 +28,7 @@
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>local-caching-classloader</artifactId>
+  <name>classloader-extras-local-caching</name>
   <properties>
     <accumulo.build.extraTestArgs>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.management/java.lang.management=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.stream=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED</accumulo.build.extraTestArgs>
     <eclipseFormatterStyle>../../src/build/eclipse-codestyle.xml</eclipseFormatterStyle>
@@ -45,6 +46,12 @@
   </properties>
   <dependencies>
     <dependency>
+      <!-- needed for build checks, but not for runtime -->
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <scope>provided</scope>
@@ -53,6 +60,12 @@
       <!-- provided by accumulo -->
       <groupId>org.apache.accumulo</groupId>
       <artifactId>accumulo-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <!-- provided by accumulo -->
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -90,12 +103,6 @@
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
-    <!--    <dependency>-->
-    <!--       provided by accumulo -->
-    <!--      <groupId>org.apache.hadoop</groupId>-->
-    <!--      <artifactId>hadoop-client-api</artifactId>-->
-    <!--      <scope>provided</scope>-->
-    <!--    </dependency>-->
   </dependencies>
   <build>
     <plugins>
