Updated PR with the following changes:
  - Made some classes final for the spotbugs CT_CONSTRUCTOR_THROW error
  - Added retry with backoff to cacheResource
  - Replaced ConcurrentHashMap with Caffeine Cache
  - Renamed LocalCachingContextClassLoader to LocalCachingContext

--- a/modules/local-caching-classloader/pom.xml
+++ b/modules/local-caching-classloader/pom.xml
@@ -52,6 +52,11 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <scope>provided</scope>
