Add tools for ContextDefinition create and cleanup
Modified ContextDefinition to implement KeywordExecutable so that
the user can use `accumulo create-context-definition` to create the
json required for the ContextDefinition file.

Added a Cleaner to call `URLClassLoader.close` on instances that are
about to be garbage collected. The LocalCachingContextCleaner is used
to register the URLClassLoader with the Cleaner and this class also
keeps references to the URLClassLoaders. The list is accessed from
a MXBean so that a user can use JMX to retrieve a list of files that
are referenced in the local cache directory from the classloaders
that have been created but not yet gc'd. This should aid users in
determining which files can be removed from the local cache directory.

--- a/modules/local-caching-classloader/pom.xml
+++ b/modules/local-caching-classloader/pom.xml
@@ -52,6 +52,11 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>com.beust</groupId>
+      <artifactId>jcommander</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
       <scope>provided</scope>
@@ -80,6 +85,12 @@
       <!-- provided by accumulo -->
       <groupId>org.apache.accumulo</groupId>
       <artifactId>accumulo-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <!-- provided by accumulo -->
+      <groupId>org.apache.accumulo</groupId>
+      <artifactId>accumulo-start</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
